--- a/environment.yml
+++ b/environment.yml
@@ -1,6 +1,7 @@
 name: clip
 channels:
 - conda-forge
+- nvidia
 - pytorch
 dependencies:
 - _libgcc_mutex=0.1=conda_forge
@@ -17,7 +18,12 @@ dependencies:
 - cairo=1.16.0=ha61ee94_1014
 - certifi=2023.7.22=pyhd8ed1ab_0
 - charset-normalizer=3.2.0=pyhd8ed1ab_0
-- cpuonly=2.0=0
+- cuda-cudart=11.8.89=0
+- cuda-cupti=11.8.87=0
+- cuda-libraries=11.8.0=0
+- cuda-nvrtc=11.8.89=0
+- cuda-nvtx=11.8.86=0
+- cuda-runtime=11.8.0=0
 - dav1d=1.2.1=hd590300_0
 - dbus=1.13.6=h5008d03_3
 - expat=2.5.0=hcb278e6_1
@@ -65,8 +71,14 @@ dependencies:
 - libcblas=3.9.0=16_linux64_mkl
 - libclang=15.0.7=default_h7634d5b_3
 - libclang13=15.0.7=default_h9986a30_3
+- libcublas=11.11.3.6=0
+- libcufft=10.9.0.58=0
+- libcufile=1.7.2.10=0
 - libcups=2.3.3=h36d4200_3
+- libcurand=10.3.3.141=0
 - libcurl=8.1.2=h409715c_0
+- libcusolver=11.4.1.48=0
+- libcusparse=11.7.5.86=0
 - libdb=6.2.32=h9c3ff4c_0
 - libdeflate=1.17=h0b41bf4_0
 - libdrm=2.4.114=h166bdaf_0
@@ -91,7 +103,9 @@ dependencies:
 - liblapacke=3.9.0=16_linux64_mkl
 - libllvm15=15.0.7=hadd5161_1
 - libnghttp2=1.52.0=h61bc06f_0
+- libnpp=11.8.0.86=0
 - libnsl=2.0.0=hd590300_1
+- libnvjpeg=11.9.0.86=0
 - libogg=1.3.4=h7f98852_1
 - libopencv=4.7.0=py311h7a0761e_1
 - libopenvino=2023.1.0=h59595ed_0
@@ -168,8 +182,9 @@ dependencies:
 - pysocks=1.7.1=pyha2e5f31_6
 - python=3.11.6=hab00c5b_0_cpython
 - python_abi=3.11=4_cp311
-- pytorch=2.0.1=py3.11_cpu_0
-- pytorch-mutex=1.0=cpu
+- pytorch=2.0.1=py3.11_cuda11.8_cudnn8.7.0_0
+- pytorch-cuda=11.8=h7e8668a_5
+- pytorch-mutex=1.0=cuda
 - qt-main=5.15.8=h5d23da1_6
 - readline=8.2=h8228510_1
 - requests=2.31.0=pyhd8ed1ab_0
@@ -179,8 +194,9 @@ dependencies:
 - sympy=1.12=pypyh9d50eac_103
 - tbb=2021.9.0=hf52228f_0
 - tk=8.6.13=h2797004_0
-- torchaudio=2.0.2=py311_cpu
-- torchvision=0.15.2=py311_cpu
+- torchaudio=2.0.2=py311_cu118
+- torchtriton=2.0.0=py311
+- torchvision=0.15.2=py311_cu118
 - typing_extensions=4.8.0=pyha770c72_0
 - tzdata=2023c=h71feb2d_0
 - urllib3=2.0.5=pyhd8ed1ab_0
